# snoutsaver-backend

./: .gitignore  README.md
snoutsaver/: Jenkinsfile  pyproject.toml
snoutsaver/performance-tests/: test_index.py
snoutsaver/scripts/: initial-db.py  run-api  run-api.bat  run-performance-test.bat  run-test.bat
snoutsaver/snoutsaver/: config.py  deps.py  main.py  security.py  seed_data.py
snoutsaver/snoutsaver/models/: __init__.py  categories.py  pockets.py  records.py  setups.py  users.py
snoutsaver/snoutsaver/routers/: __init__.py  authentication.py  categories.py  pockets.py  records.py  root.py  setups.py  users.py
snoutsaver/tests/: conftest.py  test_categories.py  test_record.py
