[tool.poetry]
name = "snoutsaver"
version = "0.1.0"
description = ""
authors = ["Yanisa Thaenthong <mook.yanisa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
